[package]
name = "deno_whoami"
version = "0.1.0"
edition = "2021"
description = "This crate implements the username() API in Deno Node compat layer."
license = "MIT"

[target.'cfg(windows)'.dependencies]
whoami = "1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
whoami = "1.4"